# dynatype

./: LICENSE  README.md  pyproject.toml
src/: __init__.py
