[project]
name = "dynatype"
version = "0.0.1"
authors = [
  { name="PlaceReporter99", email="placereporter99pypi@outlook.com" },
]
description = "A dynamic type checker in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PlaceReporter99/dynatype"
"Bug Tracker" = "https://github.com/PlaceReporter99/dynatype/issues"
